<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.davide.poirecognition.MainActivity"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    >

   <EditText
       android:id="@+id/PoiName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="text"
       android:hint="@string/PoiNameHint"/>

    <EditText
        android:id="@+id/WiFiScanNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/WiFiScanNumberHint"
        android:layout_below="@+id/TimeInterval"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/TimeInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/TimeIntervalHint"
        android:layout_below="@+id/PoiName"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/Training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/BttTraining"
        android:layout_below="@+id/WiFiScanNumber"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/getData"
        android:text="@string/BttGetData"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Training"
        android:layout_alignEnd="@+id/TimeInterval" />

<ScrollView
    android:id="@+id/scrollScan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/Training">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textScan" />

    </LinearLayout>

</ScrollView>


</RelativeLayout>